--- a/style/main.css
+++ b/style/main.css
@@ -5,10 +5,23 @@
   --color4: #A68524; 
   --color5: #BFAE99; 
 }
+@font-face {
+  font-family: 'Fallout-font';
+  src: url(/fonts/overseer/Overseer.otf);
+}
 *{
   margin: 0;
   border: 0;
   padding: 0;
+}
+header{
+  background-color: var(--color2);
+  font-family: 'Fallout-font';
+  text-align: center;
+  font-size: 30px;
+}
+p{
+  text-shadow: 1px 1px 2px var(--color2);
 }
 body {
   display: flex;
@@ -17,7 +30,6 @@ body {
  }
  .nav-menu{
   display: flex;
-  background-color: var(--color2);
   height: 50px;
   align-items: center;
   justify-content: flex-end;
