--- a/style/style-index.css
+++ b/style/style-index.css
@@ -26,11 +26,14 @@ p{
   height: 500px;
   width: 850px;
 }
-article{
+.index-article{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: var(--color2);
+  margin: 30px 50px 0px 50px;
+  border-radius: 20px;
 }
 .title-treiler{
   display: flex;
