--- a/style/style-shop.css
+++ b/style/style-shop.css
@@ -20,7 +20,6 @@ align-items: center;
   background-color:  var(--color2);
   width: 70%;
   align-items: center;
-  justify-content:space-around;
   border-radius: 20px;
 }
 
@@ -33,4 +32,7 @@ align-items: center;
 }
 .shop-link:active{
   color: var(--color4);
+}
+img{
+  margin: 20px;
 }
