--- a/style/style-index.css
+++ b/style/style-index.css
@@ -34,6 +34,7 @@ p{
   background-color: var(--color2);
   margin: 30px 50px 0px 50px;
   border-radius: 20px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.699);
 }
 .title-treiler{
   display: flex;
@@ -42,6 +43,7 @@ p{
   padding: 25px;
   justify-content: center;
   border-radius: 20px 20px 0px 0px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.699);
 }
 .treiler-sec{
   display: flex;
@@ -49,6 +51,7 @@ p{
   margin: 0px 50px 0px 50px;
   padding: 25px;
   border-radius: 0px 0px 20px 20px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.699);
 }
 #fallout-3{
   display: flex;
